# gatus-mcp-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  config.toml.example  verify_prompts.sh
.gemini/commands/: build-fix.toml  release-summary.toml  test-fix.toml
.github/workflows/: ci.yml  docker.yml  release.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/advanced_alerting_verification_20260419/: spec.md
conductor/archive/advanced_diagnostics_monitoring_20260419/: index.md  metadata.json  plan.md  spec.md
conductor/archive/alert_history_20260411/: metadata.json  spec.md
conductor/archive/badge_generation_20260418/: metadata.json  plan.md  spec.md
conductor/archive/core_mcp_20260410/: index.md  metadata.json  spec.md
conductor/archive/deep_dive_diagnostics_20260419/: plan.md  spec.md
conductor/archive/detailed_certificate_audit_20260419/: index.md  plan.md
conductor/archive/diagnostic_bundle_orchestrator_20260419/: metadata.json
conductor/archive/endpoint_lifecycle_mgmt_20260419/: index.md  metadata.json  plan.md  spec.md
conductor/archive/enhanced_diagnostics_20260416/: index.md  metadata.json  plan.md  spec.md
conductor/archive/get_config_20260411/: index.md  (+2 more)
src/: cli.rs  client.rs  fmt.rs  http_server.rs  lib.rs  main.rs  mcp.rs  server.rs  settings.rs
src/gatus/: mod.rs
tests/: test_alert_history.rs  test_client.rs  test_client_alerts.rs  test_client_auth.rs  test_client_badges.rs  test_client_cert_audit.rs  test_client_cert_monitoring.rs  test_client_config.rs  test_client_diagnostic_bundle.rs  test_client_failure_summary.rs  test_client_filtering.rs  test_client_group_stats.rs  test_client_key_mgmt.rs  test_client_lifecycle.rs  test_client_metrics.rs  test_client_mutative.rs  test_client_notification_events.rs  test_client_page_health.rs  test_client_performance_comparison.rs  test_client_push.rs  test_client_raw_results.rs  test_client_self_hosted.rs  test_client_suite_health.rs  test_endpoint_status.rs  test_endpoint_status_targeted.rs  test_enhanced_diagnostics.rs  test_error_handling.rs  test_fmt.rs  test_fmt_advanced.rs  test_fmt_alerts.rs  test_fmt_cert_audit.rs  test_fmt_diagnostic_bundle.rs  test_fmt_enhanced.rs  test_fmt_lifecycle.rs  test_fmt_page_health.rs  test_fmt_suite_health.rs  test_gatus.rs  test_health_result_deserialization.rs  test_http_server.rs  test_integration_alerts.rs  (+53 more)
(+104 files in other folders)
