[package]
name = "gatus-mcp-rs"
version = "0.1.0"
edition = "2021"
authors = ["Nicholas Wilde"]
description = "Gatus MCP Server implementation in Rust"

[lib]
name = "gatus_mcp_rs"
path = "src/lib.rs"

[[bin]]
name = "gatus-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
anyhow = "1.0"
clap = { version = "4.3", features = ["derive", "env"] }
config = { version = "0.15.19", features = ["toml"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dashmap = "6.1"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "2.0"
futures = "0.3"
tokio-stream = "0.1"
tower = "0.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
