[package]
name = "gatus-mcp-rs"
version = "0.1.3"
edition = "2021"
authors = ["Nicholas Wilde"]
description = "Gatus MCP Server implementation in Rust"
license = "Apache-2.0"

[lib]
name = "gatus_mcp_rs"
path = "src/lib.rs"

[[bin]]
name = "gatus-mcp-rs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
anyhow = "1.0"
clap = { version = "4.3", features = ["derive", "env"] }
config = { version = "0.15.19", features = ["toml"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
dashmap = "6.1"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "2.0"
dotenvy = "0.15"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
moka = { version = "0.12", features = ["future"] }
governor = "0.6"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1.28", features = ["full"] }
axum-test = "20.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.ci]
inherits = "test"
opt-level = 1
debug = false
incremental = false

